# rules_ros

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  generate_python_requirements.sh  pylint.rc  pyproject.toml  renovate.json5  requirements.txt  requirements_lock.txt  ros_msg.patch  ruff.toml
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: main.yml  release.yml  release_prep.sh  tag.yaml
build_tools/: BUILD.bazel  pylint.bzl  run_pylint.py
build_tools/toolchains/: BUILD.bazel  README.md  toolchains.bzl
build_tools/toolchains/gcc-linaro-7.5.0-aarch64-linux/: BUILD.bazel  cc_toolchain_config.bzl  repositories.bzl
build_tools/toolchains/gcc-linaro-7.5.0-aarch64-linux/wrappers/: aarch64-linux-gnu-ar  aarch64-linux-gnu-cpp  aarch64-linux-gnu-gcc  aarch64-linux-gnu-gcov  aarch64-linux-gnu-ld  aarch64-linux-gnu-nm  aarch64-linux-gnu-objdump  aarch64-linux-gnu-strip
docker/: BUILD.bazel  image.bzl
docker/base/: base.Dockerfile  build_base.sh
docs/: BUILD.bazel  cc_defs_docs.md  dynamic_reconfigure_docs.md  interfaces_docs.md  launch_docs.md  test_docs.md  topic_docs.md
examples/: BUILD.bazel  MODULE.bazel  README.md  chatter.launch  listener.py
examples/bzlmod/: MODULE.bazel
examples/chatter/: BUILD.bazel  README.md  chatter.launch  listener.cc  listener.py  talker.cc  talker_tests.launch  talker_tests.launch.tpl  test_tf2_py.py
examples/dishwasher/: BUILD.bazel  client.cc  dishwasher.launch  server.cc
examples/dynamic_reconfiguration/: BUILD.bazel  Tutorial.cfg  client.cc  dynamic_reconfiguration.launch  server.cc  server.py
extensions/: ros_repositories.bzl
repositories/: BUILD.bazel  actionlib.BUILD.bazel  angles.BUILD.bazel  bzip2.BUILD.bazel  common_msgs.BUILD.bazel  console_bridge.BUILD.bazel  deps.bzl  dynamic_reconfigure.BUILD.bazel  eigen.BUILD.bazel  gencpp.BUILD.bazel  genmsg.BUILD.bazel  genpy.BUILD.bazel  geometry.BUILD.bazel  geometry2.BUILD.bazel  lz4.BUILD.bazel  orocos_kdl.BUILD.bazel  repositories.bzl  ros.BUILD.bazel  ros_comm.BUILD.bazel  ros_comm_msgs.BUILD.bazel  rosconsole.BUILD.bazel  roscpp_core.BUILD.bazel  rospack.BUILD.bazel  rospkg.BUILD.bazel  std_msgs.BUILD.bazel  tinyxml.BUILD.bazel  tinyxml2.BUILD.bazel  urdfdom.BUILD.bazel  urdfdom_headers.BUILD.bazel
ros/: BUILD.bazel  action_generation.bzl  cc_defs.bzl  dynamic_reconfigure.bzl  extensions.bzl  interfaces.bzl  launch.bzl  launch.py.tpl  message_generation.bzl  parameter_generator_app.py  test.bzl  test.py.tpl  topic.bzl  utils.bzl
ros/repositories/: BUILD.bazel  actionlib.BUILD.bazel  common_msgs.BUILD.bazel  dynamic_reconfigure.BUILD.bazel  gencpp.BUILD.bazel  genmsg.BUILD.bazel  genpy.BUILD.bazel  geometry2.BUILD.bazel  orocos_kdl.BUILD.bazel  repositories.MODULE.bazel  repositories.bzl  ros_comm.BUILD.bazel  ros_comm_msgs.BUILD.bazel  ros_logging_config.py.tpl  rosconsole.BUILD.bazel  roscpp_core.BUILD.bazel  std_msgs.BUILD.bazel  urdfdom.BUILD.bazel
test/rostest/: BUILD.bazel  roslaunch_tests.py  simple_tests.cc  simple_tests.launch
