load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "python_requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = ":requirements.txt",
    requirements_txt = ":requirements_lock.txt",
    tags = ["manual"],
)

exports_files([
    "pylint.rc",
    "requirements.txt",
    "requirements_lock.txt",
])

alias(
    name = "roscore",
    actual = "//third_party/ros/roslaunch:roscore",
)

alias(
    name = "rosgraph",
    actual = "@ros_comm//:rosgraph",
)

alias(
    name = "rosparam",
    actual = "@ros_comm//:rosparam",
)

alias(
    name = "rosbag_record",
    actual = "@ros_comm//:rosbag_record",
)

alias(
    name = "rosbag_play",
    actual = "@ros_comm//:rosbag_play",
)

alias(
    name = "rosservice",
    actual = "//third_party/ros/rosservice",
)
