load("@rules_python//python:defs.bzl", "py_library")

exports_files([
    "pylint.rc",
    "requirements.txt",
    "requirements_lock.txt",
])

py_library(
    name = "py_roslib_slim",
    srcs = [
        "//third_party/roslib:__init__.py",
        "//third_party/roslib:message.py",
        "//third_party/roslib:names.py",
    ],
    imports = ["third_party"],
    visibility = ["//visibility:public"],
    deps = [
        "@ros_genmsg//:genmsg",
        "@ros_genpy//:genpy",
    ],
)

py_library(
    name = "dynamic_reconfigure",
    srcs = ["//third_party/dynamic_reconfigure:parameter_generator.py"],
    imports = ["third_party"],
    visibility = ["//visibility:public"],
)

alias(
    name = "roscore",
    actual = "//third_party/legacy_roslaunch:roscore",
)

alias(
    name = "rosgraph",
    actual = "@ros_comm//:rosgraph",
)
 
alias(
    name = "rosparam",
    actual = "@ros_comm//:rosparam",
)

alias(
    name = "rosbag_record",
    actual = "@ros_comm//:rosbag_record",
)

alias(
    name = "rosbag_play",
    actual = "@ros_comm//:rosbag_play",
)

alias(
    name = "rosservice",
    actual = "//third_party/rosservice:rosservice",
)
