module(name = "com_github_mvukov_rules_ros")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "bzip2", version = "1.0.8")
bazel_dep(name = "eigen", version = "3.4.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.0")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_python", version = "0.31.0")

non_module_ros_repositories = use_extension("//extensions:ros_repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_ros_repositories,
    "console_bridge",
    "roscpp_core",
    "rosconsole",
    "ros_genmsg",
    "ros_gencpp",
    "ros_genpy",
    "ros_std_msgs",
    "ros_comm_msgs",
    "ros_comm",
    "ros_ros",
    "ros_common_msgs",
    "ros_actionlib",
    "ros_dynamic_reconfigure",
    "ros_geometry2",
    "orocos_kdl",
    "urdfdom_headers",
    "tinyxml",
    "urdfdom",
)

bazel_dep(name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "com_github_nelhage_rules_boost",
    urls = "https://github.com/finn-ball/rules_boost/archive/refs/heads/finn/bzl-mod.zip",
    strip_prefix = "rules_boost-finn-bzl-mod",
    integrity = "sha256-22PssGpUviitRjo8J4nkBy06x5UfOWqA3J7EtbejNaA=",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.10",
)
use_repo(python, "python_3_10", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rules_ros_pip_deps",
    python_version = "3.10",
    requirements_lock = "@com_github_mvukov_rules_ros//:requirements_lock.txt",
)
use_repo(pip, "rules_ros_pip_deps")

internal_deps = use_extension("@rules_python//python/private/bzlmod:internal_deps.bzl", "internal_deps")
use_repo(
    internal_deps,
    "rules_python_internal",
)
