[tool]

[tool.poetry]
name = "com_github_mvukov_rules_ros"
version = "0.0.1"
authors = []
description = ""

[tool.poetry.dependencies]
python = "^3.8"
defusedxml = "*"
empy = "*"
gnupg = "*"
netifaces = "*"  # Compiled, could be replaced with ifaddr.
numpy = "*"  # Compiled, only one file in rospy needs it.
pycryptodomex = "*"
rospkg = "*"
pyyaml = "*"  # Compiled, find a way to install without libyaml here.

[tool.poetry.dev-dependencies]
pylint = "*"

[build-system]
requires = ["poetry>=1.1.1"]
build-backend = "poetry.masonry.api"
