load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "cc_defs_docs",
    bzl_library_target = "//ros:cc_defs",
)

stardoc_with_diff_test(
    name = "interfaces_docs",
    bzl_library_target = "//ros:interfaces",
    symbol_names = [
        "cc_ros_interface_library",
        "py_ros_interface_library",
        "ros_interface_library",
    ],
)

stardoc_with_diff_test(
    name = "launch_docs",
    bzl_library_target = "//ros:launch",
)

stardoc_with_diff_test(
    name = "test_docs",
    bzl_library_target = "//ros:test",
)

stardoc_with_diff_test(
    name = "topic_docs",
    bzl_library_target = "//ros:topic",
)

update_docs()
