# The following aliases are defined for convenience.

alias(
    name = "roscore",
    actual = "@rules_ros//third_party/ros/roslaunch:roscore",
)

alias(
    name = "rosgraph",
    actual = "@ros_comm//:rosgraph",
)

alias(
    name = "rosparam",
    actual = "@ros_comm//:rosparam",
)

alias(
    name = "rosbag_record",
    actual = "@ros_comm//:rosbag_record",
)

alias(
    name = "rosbag_play",
    actual = "@ros_comm//:rosbag_play",
)

alias(
    name = "rosservice",
    actual = "@rules_ros//third_party/ros/rosservice",
)
