module(name = "rules_ros_examples")

bazel_dep(name = "rules_python", version = "0.38.0")
bazel_dep(name = "boost.any", version = "1.83.0")
bazel_dep(name = "boost.smart_ptr", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.thread", version = "1.83.0")

# This import is relevant for these examples and this (rules_ros) repository.
bazel_dep(name = "rules_ros")
local_path_override(
    module_name = "rules_ros",
    path = "..",
)
