module(name = "rules_ros_examples")

bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "boost.any", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.smart_ptr", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.thread", version = "1.83.0.bcr.1")

# This import is relevant for these examples and this (rules_ros) repository.
bazel_dep(name = "rules_ros")
local_path_override(
    module_name = "rules_ros",
    path = "..",
)

non_module_ros_repositories = use_extension("@rules_ros//ros:extensions.bzl", "non_module_dependencies")
use_repo(
    non_module_ros_repositories,
    "console_bridge",
    "orocos_kdl",
    "ros_actionlib",
    "ros_comm",
    "ros_comm_msgs",
    "ros_common_msgs",
    "ros_dynamic_reconfigure",
    "ros_gencpp",
    "ros_genmsg",
    "ros_genpy",
    "ros_geometry2",
    "ros_ros",
    "ros_std_msgs",
    "rosconsole",
    "roscpp_core",
    "tinyxml",
    "urdfdom",
    "urdfdom_headers",
)
