load(
    "@com_github_mvukov_rules_ros//ros:interfaces.bzl",
    "cc_ros_interface_library",
    "py_ros_interface_library",
    "ros_interface_library",
)

ros_interface_library(
    name = "actionlib_msgs",
    srcs = glob(["actionlib_msgs/msg/*.msg"]),
    deps = ["@ros_std_msgs//:std_msgs"],
    visibility = ["//visibility:public"],
)

cc_ros_interface_library(
    name = "cc_actionlib_msgs",
    deps = [":actionlib_msgs"],
    visibility = ["//visibility:public"],
)

py_ros_interface_library(
    name = "py_actionlib_msgs",
    deps = [":actionlib_msgs"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "genaction",
    srcs = ["actionlib_msgs/scripts/genaction.py"],
    visibility = ["//visibility:public"],
)

ros_interface_library(
    name = "diagnostic_msgs",
    srcs = glob(["diagnostic_msgs/msg/*.msg", "diagnostic_msgs/srv/*.srv"]),
    deps = ["@ros_std_msgs//:std_msgs"],
    visibility = ["//visibility:public"],
)

ros_interface_library(
    name = "geometry_msgs",
    srcs = glob(["geometry_msgs/msg/*.msg"]),
    deps = ["@ros_std_msgs//:std_msgs"],
    visibility = ["//visibility:public"],
)

ros_interface_library(
    name = "nav_msgs",
    srcs = glob([
        "nav_msgs/action/*.action",
        "nav_msgs/msg/*.msg",
        "nav_msgs/srv/*.srv",
    ]),
    deps = [
        ":actionlib_msgs",
        ":geometry_msgs",
        "@ros_std_msgs//:std_msgs",
    ],
    visibility = ["//visibility:public"],
)

cc_ros_interface_library(
    name = "cc_nav_msgs",
    deps = [":nav_msgs"],
    visibility = ["//visibility:public"],
)

py_ros_interface_library(
    name = "py_nav_msgs",
    deps = [":nav_msgs"],
    visibility = ["//visibility:public"],
)

ros_interface_library(
    name = "sensor_msgs",
    srcs = glob(["sensor_msgs/msg/*.msg", "sensor_msgs/srv/*.srv"]),
    deps = [
        ":geometry_msgs",
        "@ros_std_msgs//:std_msgs",
    ],
    visibility = ["//visibility:public"],
)

cc_ros_interface_library(
    name = "cc_sensor_msgs",
    deps = [":sensor_msgs"],
    visibility = ["//visibility:public"],
)

py_ros_interface_library(
    name = "py_sensor_msgs",
    deps = [":sensor_msgs"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cc_sensor_msgs_lib",
    hdrs = glob(["sensor_msgs/include/sensor_msgs/**/*.h"]),
    deps = [":cc_sensor_msgs"],
    includes = ["sensor_msgs/include"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "py_sensor_msgs_lib",
    srcs = glob(["sensor_msgs/src/sensor_msgs/*.py"]),
    deps = [":py_sensor_msgs"],
    imports = ["sensor_msgs/src"],
    visibility = ["//visibility:public"],
)
