load("@rules_ros_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "genpy",
    srcs = glob(["src/**/*.py"]),
    imports = ["src"],
    deps = [
        "@ros_genmsg//:genmsg",
        requirement("pyyaml"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "genmsg_py",
    srcs = ["scripts/genmsg_py.py"],
    main = "scripts/genmsg_py.py",
    deps = [":genpy"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "gensrv_py",
    srcs = ["scripts/gensrv_py.py"],
    main = "scripts/gensrv_py.py",
    deps = [":genpy"],
    visibility = ["//visibility:public"],
)
