""" Builds ros.
"""

load("@rules_ros_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "rosclean",
    srcs = ["tools/rosclean/src/rosclean/__init__.py"],
    deps = [requirement("rospkg")],
    imports = ["tools/rosclean/src"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "rosunit",
    srcs = glob(["tools/rosunit/src/rosunit/*.py"]),
    imports = ["tools/rosunit/src"],
    visibility = ["//visibility:public"],
)
